<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentSettingsOverview">

    <TextView
        android:id="@+id/txtSettingsOverviewHeader"
        style="@style/HeaderStyle"
        android:text="@string/header_settings_overview"
        app:layout_constraintEnd_toStartOf="@+id/txtSettingsOverviewRobotNam"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtSettingsOverviewRobotNam"
        style="@style/HeaderRobotNameStyle"
        android:text="@string/placeholder_robot_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        style="@style/LinearLayout_Base_ButtonPane"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSettingsOverviewHeader">

        <LinearLayout
            style="@style/LinearLayout_Horizontal_ButtonPane">

            <LinearLayout
                style="@style/Linearlayout_ButtonPrimary1">
                <ImageView
                    style="@style/ButtonImage"
                    android:src="@drawable/icon_apps" />
                <Button
                    style="@style/ButtonPaneBase"
                    android:text="@string/btnSettingsOverviewAppsInstalled" />
            </LinearLayout>

            <LinearLayout
                style="@style/Linearlayout_ButtonPrimary2">
                <ImageView
                    style="@style/ButtonImage"
                    android:src="@drawable/icon_apps" />
                <Button
                    style="@style/ButtonPaneBaseLight"
                    android:text="@string/btnSettingsOverviewAppsInstallable" />
            </LinearLayout>

            <LinearLayout
                style="@style/Linearlayout_ButtonPrimary2">
                <ImageView
                    style="@style/ButtonImage"
                    android:src="@drawable/icon_apps" />
                <Button
                    style="@style/ButtonPaneBaseLight"
                    android:text="@string/btnSettingsOverviewAppsUpdateable" />
            </LinearLayout>

        </LinearLayout>
        <LinearLayout style="@style/LinearLayout_Horizontal_ButtonPane">

            <LinearLayout
                style="@style/Linearlayout_ButtonPrimary2">
                <ImageView
                    style="@style/ButtonImage"
                    android:src="@drawable/icon_users" />
                <Button
                    style="@style/ButtonPaneBaseLight"
                    android:text="@string/btnSettingsOverviewUserAdd" />
            </LinearLayout>

            <LinearLayout
                style="@style/Linearlayout_ButtonPrimary2">
                <ImageView
                    style="@style/ButtonImage"
                    android:src="@drawable/icon_users" />
                <Button
                    style="@style/ButtonPaneBaseLight"
                    android:text="@string/btnSettingsOverviewUserRemove" />
            </LinearLayout>

        </LinearLayout>
        <LinearLayout style="@style/LinearLayout_Horizontal_ButtonPane">

            <LinearLayout
                style="@style/Linearlayout_ButtonControl">
                <ImageView
                    style="@style/ButtonImage"
                    android:src="@drawable/icon_repository_dark" />
                <Button
                    style="@style/ButtonPaneBase"
                    android:text="@string/btnSettingsOverviewRepositoryAdd" />
            </LinearLayout>

            <LinearLayout
                style="@style/Linearlayout_ButtonControl">
                <ImageView
                    style="@style/ButtonImage"
                    android:src="@drawable/icon_repository_dark" />
                <Button
                    style="@style/ButtonPaneBase"
                    android:text="@string/btnSettingsOverviewRepositoryRemove" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>