<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentOverview">

    <TextView
        android:id="@+id/txtOvervieHeader"
        style="@style/HeaderStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/header_home"
        app:layout_constraintEnd_toStartOf="@+id/txtOverviewRobotName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtOverviewRobotName"
        style="@style/HeaderRobotNameStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_robot_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtOvervieHeader">

        <LinearLayout style="@style/LinearLayout_Horizontal_ButtonPane">

            <LinearLayout
                android:id="@+id/btnApps"
                style="@style/Linearlayout_ButtonPrimary1">

                <ImageView
                    style="@style/ButtonImage"
                    android:src="@drawable/icon_apps" />

                <Button
                    style="@style/ButtonPaneBaseLight"
                    android:text="@string/btnOverviewApps" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout style="@style/LinearLayout_Horizontal_ButtonPane">

            <LinearLayout
                android:id="@+id/btnUsers"
                style="@style/Linearlayout_ButtonPrimary2">

                <ImageView
                    style="@style/ButtonImage"
                    android:src="@drawable/icon_users" />

                <Button
                    style="@style/ButtonPaneBaseLight"
                    android:text="@string/btnOverviewUsers" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            style="@style/LinearLayout_Horizontal_ButtonPane"
            android:gravity="bottom">

            <LinearLayout
                android:id="@+id/btnSettings"
                style="@style/Linearlayout_ButtonControl">

                <ImageView
                    style="@style/ButtonImageSmall"
                    android:src="@drawable/icon_settings_dark" />

                <Button
                    style="@style/ButtonPaneControl"
                    android:text="@string/btnOverviewSettings" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>